<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Map -->
    <string name="map_btn_start">Start</string>
    <string name="map_btn_done">Finish</string>
    <string name="map_crosshair">Map crosshair</string>
    <string name="map_label_lat">Latitude</string>
    <string name="map_label_long">Longitude</string>
    <string name="map_label_zoom">Zoom</string>
    <string name="map_label_time">Time</string>
    <string name="map_default_value">--</string>
    <string name="map_default_time">--:--:---</string>

    <!-- Start -->
    <string name="start_title">Start</string>
    <string name="start_run_experiment">Run Experiment</string>
    <string name="start_demo_touch">Demo Touch</string>
    <string name="start_demo_face">Demo Facial Tracking</string>
    <string name="start_help">Instructions</string>
    <string name="start_cleanup_data">Cleanup Data</string>
    <string name="start_exit">Exit</string>
    <string name="start_clean_message">Delete data directory and all its content?</string>
    <string name="start_clean_ok">Yes</string>
    <string name="start_clean_cancel">No</string>

    <!-- Setup -->
    <string name="setup_title">Setup</string>
    <string name="setup_experiment_title">Experiment</string>
    <string name="setup_btn_ok">OK</string>
    <string name="setup_btn_reset">Reset</string>
    <string name="setup_btn_exit">Exit</string>
    <string name="setup_user_initials">User initials:</string>
    <string name="setup_part">Participant code:</string>
    <string name="setup_group">Group code:</string>
    <string name="setup_trials">Number of trials per mode:</string>
    <string name="setup_orders_title">Ordering</string>
    <string name="setup_logging_title">Logging</string>
    <string name="setup_logging_data_directory">Data directory:</string>
    <string name="setup_logging_data_file">Data output file:</string>

</resources>
